--- a/TCY/Sources/MapImage.fmx
+++ b/TCY/Sources/MapImage.fmx
@@ -1,4 +1,4 @@
-inherited FMain1: TFMain1
+inherited FMapImage: TFMapImage
   Caption = 'FMain1'
   OnCreate = FormCreate
   DesignerMobile = True
@@ -8,19 +8,38 @@ inherited FMain1: TFMain1
   DesignerOrientation = 0
   DesignerOSVersion = ''
   inherited RectClient: TRectangle
-    inherited rectMenuLateral: TRectangle
-      inherited rectTop: TRectangle
-        inherited imgTop: TImage
-          MultiResBitmap.Height = 108
-          MultiResBitmap.Width = 205
-        end
+    Height = 380.000000000000000000
+    object Rectangle3: TRectangle [0]
+      Anchors = [akLeft, akBottom]
+      Height = 98.000000000000000000
+      Position.X = 16.000000000000000000
+      Position.Y = 274.000000000000000000
+      Width = 50.000000000000000000
+      object SpeedButton2: TSpeedButton
+        Align = Top
+        Height = 48.000000000000000000
+        Position.X = 1.000000000000000000
+        RepeatClick = True
+        StyleLookup = 'addtoolbutton'
+        Text = 'SpeedButton2'
+        Width = 48.000000000000000000
+        OnClick = SpeedButton2Click
+      end
+      object SpeedButton3: TSpeedButton
+        Align = Top
+        Height = 48.000000000000000000
+        Position.X = 1.000000000000000000
+        Position.Y = 48.000000000000000000
+        RepeatClick = True
+        StyleLookup = 'deleteitembutton'
+        Text = 'SpeedButton2'
+        Width = 48.000000000000000000
+        OnClick = SpeedButton3Click
       end
     end
-    object Rectangle2: TRectangle
+    object Rectangle2: TRectangle [1]
       OnGesture = Rectangle2Gesture
       Height = 550.000000000000000000
-      Position.X = -64.000000000000000000
-      Position.Y = -16.000000000000000000
       Width = 792.000000000000000000
       object Image1: TImage
         Touch.InteractiveGestures = [Zoom, Pan, DoubleTap]
@@ -5107,30 +5126,186 @@ inherited FMain1: TFMain1
         WrapMode = Stretch
       end
     end
-    object Rectangle3: TRectangle
-      Anchors = [akLeft, akBottom]
-      Height = 98.000000000000000000
-      Position.X = 16.000000000000000000
-      Position.Y = 414.000000000000000000
-      Width = 50.000000000000000000
-      object SpeedButton2: TSpeedButton
-        Align = Top
-        Height = 48.000000000000000000
-        Position.X = 1.000000000000000000
-        StyleLookup = 'addtoolbutton'
-        Text = 'SpeedButton2'
-        Width = 48.000000000000000000
-        OnClick = SpeedButton2Click
+    inherited rectMenuLateral: TRectangle
+      ClipParent = True
+      inherited ListBox1: TListBox
+        ClipChildren = True
       end
-      object SpeedButton3: TSpeedButton
-        Align = Top
-        Height = 48.000000000000000000
-        Position.X = 1.000000000000000000
-        Position.Y = 48.000000000000000000
-        StyleLookup = 'deleteitembutton'
-        Text = 'SpeedButton2'
-        Width = 48.000000000000000000
-        OnClick = SpeedButton3Click
+      inherited rectTop: TRectangle
+        inherited imgTop: TImage
+          MultiResBitmap.Height = 108
+          MultiResBitmap.Width = 205
+        end
+      end
+    end
+  end
+  object Image3: TImage [1]
+    MultiResBitmap.Height = 36
+    MultiResBitmap.Width = 22
+    MultiResBitmap.TransparentColor = 16777215
+    MultiResBitmap = <
+      item
+        Width = 22
+        Height = 36
+        PNG = {
+          89504E470D0A1A0A0000000D49484452000000160000002408060000008D06CA
+          9D000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+          01A149444154484BC597B94EC34010867D48941C4F014A9F868A07404254BC02
+          A2B55CD3D0055AC02D1DA242D0D2F31848B408893458B2BC66663C46B39BBD1C
+          25CAD7CCECF5EFE45F5F4962A9EB7A9FD328528E0BA469DA0134E1A7BCE83B81
+          9DD96DD24184F104C6DDEB399A747321E6621B3601AC1A1947A2699A770851A2
+          08CFEB789D86B95BB4A8C456B96C2C253A608A53521485BACC7ECDEAFFD9BBB9
+          4F5AA568B23C489372DE76555591BD8398B35AAE4423309734B5C333B18922AE
+          7E0909DB2A78FBF8E42C1EA993B56D3BE35CE3F4E985333BC78FCF9CE90C7A59
+          9EE725F5187C15E79CD9793D3BE14C67D0232B6C9E6D655EFBAD481DEF6AD7E9
+          BBFA25240CBE3C50CB028A5C1D1D52FE0DF6F844A58EBC29567AE7492B527C24
+          2E03AF9345EA1EE37376196CEBB45D98519698160CD884912871972832FE628D
+          C45531E2ADDA572DE2AC380BDC79F832F5E11F75541DAA16599BC721E174F7FA
+          8ED31E6E877E69B862051F2D12B3ED22283C9D4E39EB994C269CAD00FCDC8243
+          EC30725790A8C3C36F381963D8D8554128A50E645C35F13E009BB562AD8CFBAB
+          90247FD9EC9EF85677DBF40000000049454E44AE426082}
+        FileName = 
+          'C:\Users\LuizFernando\Desktop\GIT\174-free-google-maps-pointer.p' +
+          'ng'
+      end>
+    Height = 81.000000000000000000
+    Position.X = 264.000000000000000000
+    Position.Y = 120.000000000000000000
+    Visible = False
+    Width = 65.000000000000000000
+  end
+  object rectMarkers: TRectangle [2]
+    Align = Bottom
+    ClipChildren = True
+    Height = 140.000000000000000000
+    Position.Y = 427.000000000000000000
+    Width = 384.000000000000000000
+    object Rectangle4: TRectangle
+      Align = Bottom
+      Fill.Kind = None
+      Height = 43.000000000000000000
+      Position.Y = 97.000000000000000000
+      Sides = []
+      Width = 384.000000000000000000
+      object Button1: TButton
+        Align = Right
+        Height = 43.000000000000000000
+        Position.X = 200.000000000000000000
+        TabOrder = 0
+        Text = 'Adicionar'
+        Width = 184.000000000000000000
+      end
+      object Button2: TButton
+        Align = Left
+        Height = 43.000000000000000000
+        TabOrder = 1
+        Text = 'Excluir'
+        Width = 193.000000000000000000
+      end
+    end
+    object Edit1: TEdit
+      Touch.InteractiveGestures = [LongTap, DoubleTap]
+      Align = Top
+      TabOrder = 1
+      Position.Y = 54.000000000000000000
+      Width = 384.000000000000000000
+      Height = 32.000000000000000000
+      Margins.Top = 10.000000000000000000
+      Margins.Bottom = 10.000000000000000000
+    end
+    object ListView1: TListView
+      ItemAppearanceClassName = 'TListItemAppearance'
+      ItemEditAppearanceClassName = 'TListItemShowCheckAppearance'
+      HeaderAppearanceClassName = 'TListHeaderObjects'
+      FooterAppearanceClassName = 'TListHeaderObjects'
+      Align = Client
+      Height = 25.000000000000000000
+      TabOrder = 2
+      Visible = False
+      Width = 384.000000000000000000
+    end
+    object rectMarkersTop: TRectangle
+      Align = MostTop
+      Fill.Color = xFF3767A2
+      Height = 44.000000000000000000
+      Margins.Left = -10.000000000000000000
+      Margins.Right = -10.000000000000000000
+      Position.X = -10.000000000000000000
+      Sides = [Bottom]
+      Stroke.Color = xFF294181
+      Stroke.Thickness = 4.000000000000000000
+      Stroke.Join = Bevel
+      Width = 404.000000000000000000
+      object Text2: TText
+        Align = Client
+        Height = 44.000000000000000000
+        Text = 'Clique no Mapa para Adicionar um Marcador'
+        TextSettings.FontColor = claWhite
+        Width = 271.000000000000000000
+      end
+      object Image4: TImage
+        MultiResBitmap = <
+          item
+            Width = 32
+            Height = 32
+            PNG = {
+              89504E470D0A1A0A0000000D4948445200000020000000200806000000737A7A
+              F4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+              01D5494441545847ED96CD51C33010856DE7EC0248013490024201843B500005
+              A4804C0A08770A80DC813BE14E1AA0805040B8DAE63DF9D96327B2E29F64C2C1
+              DF8C66A5DDD56A254B9B783D3D5D88E378CAA6612B02C956244972C9A6612B3A
+              25700C7CC95AE0B843886BECFA2A088251AA4D816DEDFBFE0ADD77D8B6A9F630
+              B513E0A2586486E021E416F213EA4D6AF586D08D0BB6B992390E083A41025F51
+              147DB02FF51EB4D187BE2EBF4670E75AFC0541875257421FFA720EE74A5D89F3
+              1320588820AFECE348EF71B4E6C895C82D6CE605C0F60DB12CDA617B96ED06FA
+              DA77A204027191D271B24F9DADD9FC18432A2BCE678800BC78BC546F1CA33FC4
+              8E66C6688136FAB0CF399CCB18C6588133010419A1F1B667387723721FCE650C
+              0DADEC2580ACA7B8444F6C52654FCD543E752BD9F13173B3788C6DB405CE5E09
+              F712C0912D0683C1039B54F9D3D36D77B2E363E666F118DB680B384F0047B646
+              1B6B4896925678E920721FCE650C0DAD3813C06E56C89AE5D53C2FF437F8C673
+              2D54823AF83FD247E309E7328671A8E0D485E817B63BE8DB15228240272DC5B5
+              40D093FD1835FD399EE2382F204B3FC718F353B068F1BEFC402E0E7DFB8CB3FF
+              21E904AB1B9B86ADF87F95B0097C7E7A823D3D2DF1BC3F7499931AC09E715100
+              00000049454E44AE426082}
+          end>
+        Align = Right
+        Height = 40.000000000000000000
+        Margins.Right = 12.000000000000000000
+        Margins.Bottom = 4.000000000000000000
+        Position.X = 332.000000000000000000
+        Width = 60.000000000000000000
+      end
+      object Rectangle5: TRectangle
+        Align = Right
+        Fill.Kind = None
+        Height = 44.000000000000000000
+        Margins.Right = 1.000000000000000000
+        Position.X = 271.000000000000000000
+        Sides = []
+        Stroke.Color = xFF6A8EED
+        Stroke.Thickness = 4.000000000000000000
+        Width = 60.000000000000000000
+        object Image5: TImage
+          MultiResBitmap = <
+            item
+              Width = 32
+              Height = 32
+              PNG = {
+                89504E470D0A1A0A0000000D4948445200000020000000200806000000737A7A
+                F4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                00B6494441545847631805A360A0012394C60AFEFEFD3B13CAA408303333A743
+                991800AF03FEFFFF7F06CAA4083032329A40991880094A0F18187007E005A028
+                806263A810D100A407A61F2A84158CA601A2420048F7027D710B2C482400EA51
+                03EA2906B1F18500510EF8F7EF1FC8F2CF20360980978989490DC4A0D8019402
+                6A38600B103F833089065240EC0362E073C0D048849482A19F0881F4C066434A
+                013E078C5646A35130B80B227A344A47C1281860C0C00000C6FF7B24E4C335F1
+                0000000049454E44AE426082}
+            end>
+          Align = Client
+          Height = 40.000000000000000000
+          Margins.Bottom = 4.000000000000000000
+          Width = 60.000000000000000000
+        end
       end
     end
   end
@@ -5140,68 +5315,5 @@ inherited FMain1: TFMain1
       MultiResBitmap.Width = 48
       MultiResBitmap.LoadSize = 2
     end
-    object Label1: TLabel
-      Align = Right
-      StyledSettings = [Family, Style, FontColor]
-      Height = 47.000000000000000000
-      Position.X = 120.000000000000000000
-      Text = 'Label1'
-      Width = 284.000000000000000000
-    end
-  end
-  object Image3: TImage [2]
-    MultiResBitmap.Height = 67
-    MultiResBitmap.Width = 40
-    MultiResBitmap.TransparentColor = 16777215
-    MultiResBitmap = <
-      item
-        Width = 40
-        Height = 67
-        PNG = {
-          89504E470D0A1A0A0000000D4948445200000028000000430806000000EECD47
-          F4000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-          0418494441546843ED99CB6B134118C0379B6C1FF151154544F02FF0E0D58B14
-          447AAC075F500441ACAF5B6DF568C44BD46A14E2E3E0B14841AD50B088F1522F
-          52D43F4050F0A24510F19120499B5DE79B7C93EC26BBB3DFCCEEC620FE20CC37
-          D964E7976F1E3BBB31FE695656566EA652298785BE2F38069F6171F7600D8EB2
-          A243664B76D05938B29FBFB6AEC9761C8757BD5EBFCF4A25525886C2C40E5896
-          F510ABC68FC9D306CB10D6E4384C6F68FA0ED6F8B90EB2733DC2AA14AA206480
-          F373EA0C467AACBFD6126584B64F11E47251C5DA71894A1DC204139113502465
-          8289CA09C2248304BB22279049FA0976554E10246962E9A1DB7240509BED823C
-          7B7F198F43339D8EE30CB085F7B76AF63269D3C8E68B58F3A2D313D0D5B66D0F
-          98A65985BABBBF95C79E6BDC48D13C2777F37471E5C2598CC2A1CA012A9F2D9F
-          F73A704196D26D50D66DDA1054695030F2E00946726CB8704369DB17A1E482E9
-          74FA339449F2EAD332463432994C0E4A2EC826081424DCBB1255447628B00CF2
-          B23906FD566C3F14DAE860D3F57B18C9714F8C667C79783746C9E11097D95B23
-          C318B904B396855172A488FD3498C960E4129C28BDC4484E5F3A8D913ADFCE9D
-          C248CE89A72F304241EAD61DF83A711223754CEA2D027B09272EC8EE11F8944E
-          92E3BB766244A35AADB69619B6E65CE225BBAE52D0B9C616F6EDC1484EC66C38
-          F4F5F571278F51D045DF0F154995CF66AF781DDC82F4818840C3BFA682AFDF70
-          5C27DB8CA64BBB145FA8344F1A99F69D0CD03EE894B398001E07DF59A1B35B89
-          4A509B7E82FC176C98BECB2BDD6063ABAD8E1EF4CD60B95CCEA9EC3CA252676D
-          552A15BEACB4231B735D99307E13C38D4C104854324C0EF0ED6217FC8B87E616
-          78254E8ECD3FC7489EA43041A3582C569E7DF888B5F8987BF7DEC8E7F365AC06
-          12D6C58258BB9AD2B582D00C22FC44B57AE33E210AAED581941CAA20DF9F6DBE
-          41BBA79001EBABCAFE932CC8EEFCF859A32CE043F85D712E0A64416069696936
-          CA020EB7B7A5526916AB24E8B96E01FF7FF0A7FC2A0CB189813F4DA94DA50C02
-          ABABAB6F546EF405F00D766BF1B651A3A39341C031D937BF4FD2961D187BF8A3
-          94DB53CE205028141689CF99382097CBE516B1AA846E060167FEF0A831BC633B
-          56FD79BDFCC5D83BF31842ADB6B405D94461897142AF2E70D58049C53EABD596
-          5617032A0DEACA01DA8282A0AD3A203B462592205B3666300CA45AADFAEE94A9
-          4412B42CEB28947ECF5CC4F5B6BFBF3FD26395C85D0CACBD7A1BA316EB7CDED3
-          21B2A06DDB8119921DA31259D0344D3EC6DC9B08587E00712C0AB17431E0DE86
-          896D551CC422383E3E8E518BB1B1318CA2A1BD80FAE088AB0AAE7FB19C3BB62E
-          06E0E123F5212895583388A5A0B732C8662C46AD45BAA7603B6DF8F30FB2E8D4
-          6A35FE47602FC2051B613CC43BA213E0BF60547A5EB0C7318C3F4ACB665F7D70
-          11DA0000000049454E44AE426082}
-        FileName = 
-          'C:\Users\LuizFernando\Desktop\GIT\174-free-google-maps-pointer.p' +
-          'ng'
-      end>
-    Height = 49.000000000000000000
-    Position.X = 288.000000000000000000
-    Position.Y = 152.000000000000000000
-    Visible = False
-    Width = 25.000000000000000000
   end
 end
