--- a/TCY/Sources/Main.fmx
+++ b/TCY/Sources/Main.fmx
@@ -66,6 +66,7 @@ object FMain: TFMain
           TabOrder = 1
           Text = '  Imagem'
           Width = 281.000000000000000000
+          OnClick = ListBoxItem3Click
         end
         object ListBoxItem2: TListBoxItem
           Selectable = False
