--- a/TCY/Sources/Main.fmx
+++ b/TCY/Sources/Main.fmx
@@ -1531,7 +1531,7 @@ object FMain: TFMain
           Height = 30.000000000000000000
           StyleLookup = 'listboxgroupheader'
           TabOrder = 0
-          Text = 'S'#243' nas Op'#231#227'o'
+          Text = 'Op'#231#245'es'
           Width = 280.000000000000000000
         end
         object liImagem: TListBoxItem
@@ -1776,7 +1776,7 @@ object FMain: TFMain
     Buttons = <>
     OnShow = fgVirtualKeyboard1Show
     OnHide = fgVirtualKeyboard1Hide
-    Left = 176
-    Top = 272
+    Left = 312
+    Top = 104
   end
 end
